--- a/ui/flask/templates/base.html
+++ b/ui/flask/templates/base.html
@@ -45,7 +45,7 @@
                           <li onclick="showShowCss('div_newProject');setFocus('input_newProject')"><a href="#">Create New Project</a></li>
                           <li><a href="/?action_createTestCases">Create Test Cases</a></li>
                           <!--<li class="disabled"><a href="#">Create Test Cases</a></li>-->
-                          <li><a href="/?action_createPageObjects={{name_project}}">Create Page Objects</a></li>
+                          <li><a href="/?action_createPageObjects={{_InitFwk.name_project}}">Create Page Objects</a></li>
                       </ul>
                   </li>
               </ul>
