--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -26,13 +26,13 @@
                                         <!--<td>Create Test Cases</td>-->
                                     <!--</tr>-->
                                     <tr>
-                                        <td><a href="/?action_createPageObjects={{name_project}}">Create Page Objects</a></td>
+                                        <td><a href="/?action_createPageObjects={{_InitFwk.name_project}}">Create Page Objects</a></td>
                                     </tr>
                                     <tr>
                                         <td><a href="/?action_createTestCases">Create Test Cases</a></td>
                                     </tr>
                                     <tr>
-                                        <td><a href="/?action_createTestData={{name_project}}">Create Test Data Objects</a></td>
+                                        <td><a href="/?action_createTestData={{_InitFwk.name_project}}">Create Test Data Objects</a></td>
                                     </tr>
                                     <tr>
                                         <td class="disabled">Review Results</td>
