--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -79,7 +79,8 @@
                                 </td>
                                 <td>&nbsp;Or&nbsp;</td>
                                 <td style="width:400px;">
-                                    <input type="text" name="edit_add_new_element" id="edit_add_element_name" class="form-control" placeholder="Add new element. For example: btnNext OR btn_next" aria-describedby="NewElement"/>
+                                    <input type="text" name="edit_add_new_element" id="edit_add_element_name" class="form-control" placeholder="Add new element. For example: btnNext OR btn_next"
+                                           aria-describedby="NewElement"/>
                                 </td>
                             </tr>
                         </table>
@@ -89,6 +90,11 @@
                         <button id="button_confirm_add_locator" type="button" class="btn btn-primary">
                             Confirm
                         </button>
+                        <script type=text/javascript>
+                            test1 = {{ aaa|tojson }};
+
+                        </script>
+
                     </div>
                 </div>
             </div>
