--- a/ui/flask/templates/base.html
+++ b/ui/flask/templates/base.html
@@ -159,9 +159,9 @@ jQuery(function($){
 {% endblock %}
 
 {% block jslibs %}
-<!-- <script type=text/javascript>
+<script type=text/javascript>
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-</script>-->
+</script>
 
 <script src="/static/js/jquery-3.1.1.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
