--- a/ui/flask/templates/base.html
+++ b/ui/flask/templates/base.html
@@ -42,7 +42,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li onclick="showShowCss('div_newProject');setFocus('input_newProject')"><a href="#">Create New Project</a></li>
+                        <li onclick="showShowCss('div_new_project');setFocus('input_new_project')"><a href="#">Create New Project</a></li>
                         <li><a href="/?action_createTestCases">Create Test Cases</a></li>
                         <!--<li class="disabled"><a href="#">Create Test Cases</a></li>-->
                         <li><a href="/?action_createPageObjects={{_InitFwk.name_project}}">Create Page Objects</a></li>
