--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -38,8 +38,8 @@
         <!--{% endblock %}-->
         <!--</div>-->
         <script type=text/javascript>
-            jsonUiMap = eval('(' + {{ json_ui_map|tojson }} + ')');
-            jsonUiMapPages = jsonUiMap.pages.page;
+            var jsonUiMap = eval('(' + {{ json_ui_map|tojson }} + ')');
+            var jsonUiMapPages = jsonUiMap.pages.page;
         </script>
         <div class="modal fade" id="addLocatorModal" tabindex="-1" role="dialog"
              aria-labelledby="addLocatorModalLabel" aria-hidden="true">
@@ -72,18 +72,51 @@
                         </table>
                     </div>
                     <div class="modal-footer">
-                        <table>
+                        <table class="table table-striped  table-hover table-condensed table-bordered">
                             <tr>
                                 <td>
-                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdown_change_to_existed_element" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                        Change to an existed element
-                                        <span class="caret"></span>
-                                    </button>
+                                    <div class="input-group">
+                                        <div class="input-group-btn">
+                                            <button id="button_select_page" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Select Page
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" id="ul_new_page">
+                                            </ul>
+                                        </div>
+                                        <input type="text" name="input_new_page" id="input_new_page" class="form-control" placeholder="Add new page. For example: PageHome OR Page_home" aria-describedby="NewPageName"/>
+                                    </div>
                                 </td>
-                                <td>&nbsp;Or&nbsp;</td>
-                                <td style="width:400px;">
-                                    <input type="text" name="edit_add_new_element" id="edit_add_element_name" class="form-control" placeholder="Add new element. For example: btnNext OR btn_next"
-                                           aria-describedby="NewElement"/>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="input-group">
+                                        <div class="input-group-btn">
+                                            <button id="button_select_sub_page" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Select Sub Page
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" id="ul_new_sub_page">
+                                            </ul>
+                                        </div>
+                                        <input type="text" name="input_new_sub_page" id="input_new_sub_page" class="form-control" placeholder="Add new sub page. For example: PageABC OR Page_abc" aria-describedby="NewSubPageName"/>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="input-group">
+                                        <div class="input-group-btn">
+                                            <button id="button_select_element" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Select Element
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" id="ul_element_names">
+                                            </ul>
+                                        </div>
+                                        <input type="text" name="input_new_element" id="input_new_element" class="form-control" placeholder="Add new element. For example: btnNext OR btn_next"
+                                               aria-describedby="NewElement"/>
+                                    </div>
                                 </td>
                             </tr>
                         </table>
@@ -99,28 +132,28 @@
         </div>
         <div class="col-md-12 main">
             {% block right_content %}
-            <table class="table table-striped  table-hover table-condensed table-bordered">
-                <tr>
-                    <td>
-                        <div class="input-group">
-                            <div class="input-group-btn">
-                                <button id="button_select_page" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Page
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" id="ul_page_names">
-                                    <!--{% for page_name in _UiFwk.get_page_names_from_uimap() %}-->
-                                    <!--<li><a href="#">{{page_name}}</a></li>-->
-                                    <!--{% endfor %}-->
-                                </ul>
-                            </div><!-- /btn-group -->
-                            <input type="text" name="edit_newPage" id="edit_newPage" class="form-control" placeholder="Add new page. For example: PageHome OR Page_home" aria-describedby="NewPageName"/>
-                        </div>
-                    </td>
-                    <td style="width:80px;">
-                        <button class="btn btn-default" type="button">Save</button>
-                    </td>
-                </tr>
-            </table>
+            <!--<table class="table table-striped  table-hover table-condensed table-bordered">-->
+            <!--<tr>-->
+            <!--<td>-->
+            <!--<div class="input-group">-->
+            <!--<div class="input-group-btn">-->
+            <!--<button id="button_select_page" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Page-->
+            <!--<span class="caret"></span>-->
+            <!--</button>-->
+            <!--<ul class="dropdown-menu" id="ul_page_names">-->
+            <!--&lt;!&ndash;{% for page_name in xxxx %}&ndash;&gt;-->
+            <!--&lt;!&ndash;<li><a href="#">{{page_name}}</a></li>&ndash;&gt;-->
+            <!--&lt;!&ndash;{% endfor %}&ndash;&gt;-->
+            <!--</ul>-->
+            <!--</div>&lt;!&ndash; /btn-group &ndash;&gt;-->
+            <!--<input type="text" name="input_new_page" id="input_new_page" class="form-control" placeholder="Add new page. For example: PageHome OR Page_home" aria-describedby="NewPageName"/>-->
+            <!--</div>-->
+            <!--</td>-->
+            <!--<td style="width:80px;">-->
+            <!--<button class="btn btn-default" type="button">Save</button>-->
+            <!--</td>-->
+            <!--</tr>-->
+            <!--</table>-->
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">
