--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -81,7 +81,7 @@
                                                 Select Page
                                                 <span class="caret"></span>
                                             </button>
-                                            <ul class="dropdown-menu" id="ul_new_page">
+                                            <ul class="dropdown-menu" id="ul_pages">
                                             </ul>
                                         </div>
                                         <input type="text" name="input_new_page" id="input_new_page" class="form-control" placeholder="Add new page. For example: PageHome OR Page_home" aria-describedby="NewPageName"/>
@@ -96,7 +96,7 @@
                                                 Select Sub Page
                                                 <span class="caret"></span>
                                             </button>
-                                            <ul class="dropdown-menu" id="ul_new_sub_page">
+                                            <ul class="dropdown-menu" id="ul_sub_pages">
                                             </ul>
                                         </div>
                                         <input type="text" name="input_new_sub_page" id="input_new_sub_page" class="form-control" placeholder="Add new sub page. For example: PageABC OR Page_abc" aria-describedby="NewSubPageName"/>
@@ -111,7 +111,7 @@
                                                 Select Element
                                                 <span class="caret"></span>
                                             </button>
-                                            <ul class="dropdown-menu" id="ul_element_names">
+                                            <ul class="dropdown-menu" id="ul_elements">
                                             </ul>
                                         </div>
                                         <input type="text" name="input_new_element" id="input_new_element" class="form-control" placeholder="Add new element. For example: btnNext OR btn_next"
