--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -73,7 +73,7 @@
                         </table>
                     </div>
                     <div class="modal-footer">
-                        <table class="table table-striped  table-hover table-condensed table-bordered">
+                        <table id='table_page_sub_page_element' class="table table-striped  table-hover table-condensed table-bordered">
                             <tr>
                                 <td>
                                     <div class="input-group">
@@ -109,7 +109,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <a id="button_sub_add_page" href="#" class="glyphicon glyphicon-plus"/>
+                                    <a id="button_add_sub_page" href="#" class="glyphicon glyphicon-plus"/>
                                 </td>
                             </tr>
                             <tr>
