--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -178,7 +178,7 @@
                             <tbody>
                             <tr>
                                 <td style="width:50px;">1</td>
-                                <td>Wait for <a data-toggle="modal" data-target="#addLocatorModal">button_example</a> to appear in <a>30</a>s.
+                                <td>Wait for <a data-toggle="modal" data-target="#addLocatorModal" page="page_home" sub_page="">button_example</a> to appear in <a>30</a>s.
                                 </td>
                                 <td style="width:80px;">
                                     <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
@@ -200,6 +200,7 @@
                     </div>
                 </div>
             </div>
+
             {% endblock %}
         </div>
     </div>
