--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -66,13 +66,13 @@
                         </h4>
                     </div>
                     <div class="modal-body">
-                        <table id='table_locators' class="table table-striped  table-hover table-condensed table-bordered" style="border:1px solid #f2dede; height: auto;">
+                        <table id='table_locators' class="table table-striped table-hover table-condensed table-bordered" style="border:1px solid #f2dede; height: auto;">
                             <tbody>
                             </tbody>
                         </table>
                     </div>
                     <div class="modal-footer">
-                        <table id='table_page_sub_page_element' class="table table-striped  table-hover table-condensed table-bordered">
+                        <table id='table_page_sub_page_element' class="table table-striped table-hover table-condensed table-bordered">
                             <tr>
                                 <td>
                                     <div class="input-group">
@@ -134,7 +134,7 @@
                         <button type="button" class="btn btn-default" data-dismiss="modal">
                             Close
                         </button>
-                        <button id="button_ok_add_locator" type="button" class="btn btn-primary">
+                        <button id="button_ok_add_locator" type="button" class="btn btn-primary" data-dismiss="modal">
                             OK
                         </button>
                     </div>
