--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -131,10 +131,10 @@
                                 </td>
                             </tr>
                         </table>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                        <button id="button_close_add_locator" type="button" class="btn btn-default" data-dismiss="modal">
                             Close
                         </button>
-                        <button id="button_ok_add_locator" type="button" class="btn btn-primary" data-dismiss="modal">
+                        <button id="button_ok_add_locator" type="button" class="btn btn-primary">
                             OK
                         </button>
                     </div>
