--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -88,7 +88,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <a id="button_add_page" href="#" class="glyphicon glyphicon-plus"/>
+                                    <a id="button_add_new_page" href="#" class="glyphicon glyphicon-plus"/>
                                 </td>
                             </tr>
                             <tr>
@@ -108,7 +108,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <a id="button_add_sub_page" href="#" class="glyphicon glyphicon-plus"/>
+                                    <a id="button_add_new_sub_page" href="#" class="glyphicon glyphicon-plus"/>
                                 </td>
                             </tr>
                             <tr>
@@ -127,7 +127,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <a id="button_add_element" href="#" class="glyphicon glyphicon-plus"/>
+                                    <a id="button_add_new_element" href="#" class="glyphicon glyphicon-plus"/>
                                 </td>
                             </tr>
                         </table>
