--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -77,7 +77,7 @@
                                 <td>
                                     <div class="input-group">
                                         <div class="input-group-btn">
-                                            <button id="button_select_page" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <button id="button_select_page" style="width:350px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 Select Page
                                                 <span class="caret"></span>
                                             </button>
@@ -95,27 +95,27 @@
                                 <td>
                                     <div class="input-group">
                                         <div class="input-group-btn">
-                                            <button id="button_select_sub_page" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                                            <button id="button_select_subpage" style="width:350px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                                                     aria-expanded="false">
                                                 Select Sub Page
                                                 <span class="caret"></span>
                                             </button>
-                                            <ul class="dropdown-menu" id="ul_sub_pages">
+                                            <ul class="dropdown-menu" id="ul_subpages">
                                             </ul>
                                         </div>
-                                        <input type="text" name="input_new_sub_page" id="input_new_sub_page" class="form-control" placeholder="Add new sub page. For example: PageABC OR Page_abc"
+                                        <input type="text" name="input_new_subpage" id="input_new_subpage" class="form-control" placeholder="Add new sub page. For example: PageABC OR Page_abc"
                                                aria-describedby="NewSubPageName"/>
                                     </div>
                                 </td>
                                 <td>
-                                    <a id="button_add_new_sub_page" href="#" class="glyphicon glyphicon-plus"/>
+                                    <a id="button_add_new_subpage" href="#" class="glyphicon glyphicon-plus"/>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <div class="input-group">
                                         <div class="input-group-btn">
-                                            <button id="button_select_element" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <button id="button_select_element" style="width:350px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 Select Element
                                                 <span class="caret"></span>
                                             </button>
@@ -177,7 +177,7 @@
                             <tbody>
                             <tr>
                                 <td style="width:50px;">1</td>
-                                <td>Wait for <a data-toggle="modal" data-target="#addLocatorModal" page="page_home" sub_page="">button_example</a> to appear in <a>30</a>s.
+                                <td>Wait for <a data-toggle="modal" data-target="#addLocatorModal" page="page_home" subpage="">button_example</a> to appear in <a>30</a>s.
                                 </td>
                                 <td style="width:80px;">
                                     <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
