--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -46,7 +46,7 @@
             <div class="modal-dialog" style="width: 800px">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+                        <button id="button_x_add_locator" type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
                         <p></p>
                         <p></p>
                         <h4 class="modal-title" id="addLocatorModalLabel">
@@ -134,8 +134,8 @@
                         <button id="button_close_add_locator" type="button" class="btn btn-default" data-dismiss="modal">
                             Close
                         </button>
-                        <button id="button_ok_add_locator" type="button" class="btn btn-primary">
-                            OK
+                        <button id="button_save_add_locator" type="button" class="btn btn-primary">
+                            Save
                         </button>
                     </div>
                 </div>
