--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -131,12 +131,8 @@
                                 </td>
                             </tr>
                         </table>
-                        <button id="button_close_add_locator" type="button" class="btn btn-default" data-dismiss="modal">
-                            Close
-                        </button>
-                        <button id="button_save_add_locator" type="button" class="btn btn-primary">
-                            Save
-                        </button>
+                        <button id="button_close_add_locator" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button id="button_save_add_locator" type="button" class="btn btn-primary">Save</button>
                     </div>
                 </div>
             </div>
@@ -177,7 +173,7 @@
                             <tbody>
                             <tr>
                                 <td style="width:50px;">1</td>
-                                <td>Wait for <a data-toggle="modal" data-target="#addLocatorModal" page="page_home" subpage="">button_example</a> to appear in <a>30</a>s.
+                                <td>Wait for <a data-toggle="modal" data-target="#addLocatorModal" page="page_home" subpage="">button_example</a> to appear in <a trigger="digit">30</a>s.
                                 </td>
                                 <td style="width:80px;">
                                     <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
@@ -199,7 +195,6 @@
                     </div>
                 </div>
             </div>
-
             {% endblock %}
         </div>
     </div>
